--- a/instagram/index.html
+++ b/instagram/index.html
@@ -47,15 +47,69 @@
     </div>
     <div class="feeds">
         <div class="feed">
-            <div class="top"  >
+            <div class="top">
                 <div class="left">
                     <img src="img/Garen.png" alt="">
-                    <div class="name">
-                        가렌
-                        <br>2분전
+                    <div class="text">
+                        <div class="name">가렌</div>
+                        <div class="time">2분전</div>
                     </div>
                 </div>
                 <div class="right">...</div>
+            </div>
+            <div class="mid">
+                <img src="img/dog.png" alt="">
+            </div>
+            <div class="bottom">
+                <div class="left">
+                    <div class="item">
+                        <img src="img/like.svg" alt="">
+                    </div>
+                    <div class="item">
+                         <img src="img/comment.svg" alt="">
+                    </div>
+                    <div class="item">
+                         <img src="img/airplane.svg" alt="">
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="item">
+                         <img src="img/keep.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="feed">
+            <div class="top">
+                <div class="left">
+                    <img src="img/LeeSin.png" alt="">
+                    <div class="text">
+                        <div class="name">리 신</div>
+                        <div class="time">2분전</div>
+                    </div>
+                </div>
+                <div class="right">...</div>
+            </div>
+            <div class="mid">
+                <img src="img/cat.gif" alt="">
+            </div>
+            <div class="bottom">
+                <div class="left">
+                    <div class="item">
+                        <img src="img/like.svg" alt="">
+                    </div>
+                    <div class="item">
+                         <img src="img/comment.svg" alt="">
+                    </div>
+                    <div class="item">
+                         <img src="img/airplane.svg" alt="">
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="item">
+                         <img src="img/keep.svg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
