--- a/instagram/index.html
+++ b/instagram/index.html
@@ -66,15 +66,15 @@
                         <img src="img/like.svg" alt="">
                     </div>
                     <div class="item">
-                         <img src="img/comment.svg" alt="">
+                        <img src="img/comment.svg" alt="">
                     </div>
                     <div class="item">
-                         <img src="img/airplane.svg" alt="">
+                        <img src="img/airplane.svg" alt="">
                     </div>
                 </div>
                 <div class="right">
                     <div class="item">
-                         <img src="img/keep.svg" alt="">
+                        <img src="img/keep.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -99,18 +99,37 @@
                         <img src="img/like.svg" alt="">
                     </div>
                     <div class="item">
-                         <img src="img/comment.svg" alt="">
+                        <img src="img/comment.svg" alt="">
                     </div>
                     <div class="item">
-                         <img src="img/airplane.svg" alt="">
+                        <img src="img/airplane.svg" alt="">
                     </div>
                 </div>
                 <div class="right">
                     <div class="item">
-                         <img src="img/keep.svg" alt="">
+                        <img src="img/keep.svg" alt="">
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="wrapper">
+        <div class="item">
+            <img src="img/home.svg" alt="">
+        </div>
+        <div class="item">
+           <img src="img/search.svg" alt="">
+        </div>
+        <div class="item">
+            <img src="img/add.svg" alt="">
+        </div>
+        <div class="item">
+            <img src="img/like.svg" alt="">
+        </div>
+        <div class="item">
+            <img src="img/friend.svg" alt="">
+        </div>
         </div>
     </div>
 </body>
